--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,13 @@
-<ion-header [translucent]="true">
+<ion-header slot="fixed">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      Settings
+
     </ion-title>
+    
+    <ion-button slot="end" (click)="logout()">
+      <ion-icon name="power-outline"></ion-icon>
+    </ion-button>
+
   </ion-toolbar>
 </ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
-</ion-content>
